<resources>
    <string name="app_name">ILPP</string>
    <string name="web_client_id">915824120292-8kvovth7l51ra1utofrr0cd2td4diftq.apps.googleusercontent.com</string>
    <string name="title_activity_panel">PanelActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="logo">Logo</string>
    <string name="welcome">Bienvenid@ a I Love Pets</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password_ask_remember">¿Contraseña olvidada?</string>
    <string name="login">Iniciar</string>

    <string name="register_link">¿Eres nuevo? ¡Regístrate!</string>
    <string name="register_shelter_link">¿Eres una protectora? ¡Regístrate aquí!</string>

    <string name="input_your_email">Introdce tu email</string>
    <string name="logout">Desconectar</string>
    <string name="home">Inicio</string>
    <string name="send">Enviar</string>

    <string name="animal_profile">Perfil de animal</string>
    <string name="animal_categories">Categorías de animales</string>
    <string name="animal_category">Categoría de animal</string>

    <string name="title_categories">Categorías</string>
    <string name="action_view_all">Ver todos</string>

    <string name="animal_cat">Gato</string>
    <string name="animal_dog">Perro</string>
    <string name="animal_others">Otros</string>
    <string name="animal_shelter">Protectora</string>

    <string name="portal_reset_password">Restablece tu contraseña</string>
    <string name="portal_sign_up">Regístrate para empezar a usar I Love Pets</string>
    <string name="portal_sing_in">Identificate para empezar a usar I Love Pets</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellidos</string>
    <string name="password_re">Repita su contraseña</string>
    <string name="register">Registrar</string>
    <string name="portal_already_account">¿Ya tienes una cuenta? ¡Inicia sesión!</string>
    <string name="portal_sign_up_shelter">Registra la protectora en I Love Pets</string>
    <string name="animal_shelter_name">Nombre de la protectora</string>
    <string name="address">Dirección</string>
    <string name="phone">Teléfono</string>
    <string name="city">Ciudad</string>
    <string name="postal_code">Código postal</string>
    <string name="favorites">Favoritos</string>
    <string name="i_love_pets">I Love Pets</string>
    <string name="my_animals">Mis animales</string>
    <string name="insert_new">Insertar nuevo</string>
    <string name="edit">Editar</string>
    <string name="calendar">Calendario</string>
    <string name="profile">Perfil</string>
    <string name="save">Guardar</string>
    <string name="birthdate">Fecha de nacimiento</string>
    <string name="breed">Raza</string>
    <string name="weight">Peso</string>
    <string name="gender">Género</string>
    <string name="allow">Pemitir</string>
    <string name="adoption">Adopción</string>
    <string name="hosting">Acogida</string>
    <string name="walks">Paseos</string>
    <string name="adoption_animals">Animales en adopción</string>
    <string name="of">de</string>
    <string name="animal_walk_booking_title">Pasea a %s</string>
    <string name="walk_details">Detalles del paseo</string>
    <string name="date_label">Fecha:</string>
    <string name="schedule_label">Horario:</string>
    <string name="already_booked">Ya se ha reservado un paseo para este día.</string>
    <string name="no_data">No hay datos</string>
    <string name="user_label">Usuario:</string>
    <string name="animal_label">Animal:</string>
    <string name="description">Descripción</string>

</resources>