<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.portal.SignupProtectorasActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        style="@style/global.Section">

        <ImageView
            android:id="@+id/iv_Logo"
            android:transitionName="logoImageTrans"
            android:contentDescription="@string/logo"
            style="@style/portal.Logo" />

        <TextView
            android:id="@+id/tv_Title"
            android:transitionName="tv_Title"
            style="@style/portal.Text.Title"
            android:text="@string/welcome"  />

        <TextView
            android:id="@+id/tv_Desc"
            android:transitionName="tv_Desc"
            style="@style/portal.Text"
            android:text="@string/portal_sign_up_shelter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding"
            android:orientation="vertical">

            <include layout="@layout/form_animal_shelter_profile" />
            <include layout="@layout/form_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_Register"
                android:transitionName="btn_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding"
                android:text="@string/register" />

            <TextView
                android:id="@+id/tv_ExistUser"
                android:transitionName="tv_ExistUser"
                style="@style/portal.Text"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/portal_already_account"
                android:textAlignment="center"
                android:layout_marginVertical="@dimen/padding"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>