<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.panel.sections.CalendarFragment"
    android:layout_width="match_parent"
    android:padding="@dimen/padding"
    android:layout_height="wrap_content" >

    <TableRow>
        <TextView android:text="@string/user_label" android:layout_gravity="right" android:layout_marginRight="@dimen/padding" />
        <TextView
            android:id="@+id/tv_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Jorge Francisco" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/animal_label" android:layout_gravity="right" android:layout_marginRight="@dimen/padding" />
        <TextView
            android:id="@+id/tv_AnimalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Bobby" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/date_label" android:layout_gravity="right" android:layout_marginRight="@dimen/padding" />
        <TextView
            android:id="@+id/tv_Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="01/02/2023" />
    </TableRow>

    <TableRow>
        <TextView android:text="@string/schedule_label" android:layout_gravity="right" android:layout_marginRight="@dimen/padding" />
        <TextView
            android:id="@+id/tv_Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="de 5:00 a 12:00" />
    </TableRow>

</TableLayout>