<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/global.Section"
    tools:context=".activities.portal.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_Logo"
            style="@style/portal.Logo"
            android:contentDescription="@string/logo"
            android:transitionName="iv_Logo" />

        <TextView
            android:id="@+id/tv_Title"
            style="@style/portal.Text.Title"
            android:text="@string/welcome"
            android:transitionName="tv_Title" />

        <TextView
            android:id="@+id/tv_Desc"
            style="@style/portal.Text"
            android:text="@string/portal_sing_in"
            android:transitionName="tv_Desc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/padding"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_Email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/email"
                android:transitionName="tf_Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tf_Password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding"
                android:hint="@string/password"
                android:transitionName="tf_Password"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_RecoverPass"
                style="@style/global.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/password_ask_remember"
                android:textAlignment="textEnd"
                android:transitionName="tv_RecoverPass"
                tools:ignore="TouchTargetSizeCheck" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/padding"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_Login"

                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/login"
                    android:transitionName="btn_Main" />

                <Space
                    android:layout_width="@dimen/padding"
                    android:layout_height="match_parent" />

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btn_SignInGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="2dp" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tv_NewUser"
                style="@style/global.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:text="@string/register_link"
                android:textAlignment="center"
                android:transitionName="tv_NewUser"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/tv_NewProt"
                style="@style/global.Link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_shelter_link"
                android:textAlignment="center"
                android:textStyle="bold"
                android:transitionName="tv_NewUser"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_Login"
        style="@style/portal.Progress" />

</RelativeLayout>