<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.panel.sections.HomeFragment"
    style="@style/global.Section">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <com.example.ilpp.controls.AnimalSearch
            android:id="@+id/vw_AnimalSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/vw_CategoryBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10pt"
                android:orientation="vertical">

                <com.example.ilpp.controls.AnimalsManagerBar
                    android:id="@+id/br_AnimalsManager"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/home.Header"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/title_categories" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/tv_ViewAllCategories"
                        style="@style/home.Header.Link"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/action_view_all" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/btn_Cats"
                        style="@style/category">

                        <com.google.android.material.imageview.ShapeableImageView
                            style="@style/category.Image"
                            android:src="@drawable/cat" />

                        <TextView
                            style="@style/category.Text"
                            android:text="@string/animal_cat" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:id="@+id/btn_Dogs"
                        style="@style/category">

                        <com.google.android.material.imageview.ShapeableImageView
                            style="@style/category.Image"
                            android:src="@drawable/dog" />

                        <TextView
                            style="@style/category.Text"
                            android:text="@string/animal_dog" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:id="@+id/btn_Others"
                        style="@style/category">

                        <com.google.android.material.imageview.ShapeableImageView
                            style="@style/category.Image"
                            android:src="@drawable/rabbit" />

                        <TextView
                            style="@style/category.Text"
                            android:text="@string/animal_others" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </com.example.ilpp.controls.AnimalSearch>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_Home"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:visibility="invisible" />

</RelativeLayout>